--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@ call_to_action: Contact
 background_image_path:
 large_header: true
 testimonials:
-  - message: We use Justice Law in all our endeavours. They offer an unparalleled service when it comes to running a business.
+  - message: Terimakasih banyak mas Luthfi, kerja cepat, tepat dan amanah. semoga semakin sukses🤲😇.
     image: "https://placekitten.com/g/60/60?a=.png"
-    name: Joice Carmold
-  - message: Justice Law are the best of the best. Being local, they care about people and have strong ties to the community.
+    name: Mita
+  - message: Alhamdulillah Terimakasih Mas Luthfi, kerja cepat, Amanah dan Tidak diragukan 😇🙏
     image: "https://www.fillmurray.com/60/60?a=.png"
-    name: Peter Rottenburg
-  - message: Justice Law were everything we could have hoped for when buying our first home. Highly recommended to all.
+    name: Ade Triani
+  - message: Alhamdulillah di lancarkan prosesnya.
     image: "https://placebear.com/60/60?a=.png"
-    name: D. and G. Gibbleston
+    name: Melianti
 _options:
   image:
     width: 60
