--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ _options:
 ---
 
 <div class="editable">
-	<p>This is the <strong>Justice</strong> template from <a href="https://cloudcannon.com/">CloudCannon</a>. Justice is strong foundation for the web presence of a law firm or business. It's filled with fictitious example content to get you started.</p>
+	<p>Kantor Hukum kami hadir di wilayah Purbalingga, Purwokerto, Banyumas, dan Cilacap untuk memberikan solusi komprehensif dalam kasus Hukum Pidana, Perceraian, Waris, dan Perdata.</p>
 
-	<p>Justice Law is professional representation. Practicing for over 50 years, our team have the knowledge and skills to get you results.</p>
+	<p>Dengan pengalaman bertahun-tahun, tim advokat kami berkomitmen memberikan pendampingan hukum yang tepat, transparan, dan berintegritas tinggi.</p>
 </div>
 
 <div class="testimonials">
