--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@ background_image_path:
 large_header: true
 testimonials:
   - message: Terimakasih banyak mas Luthfi, kerja cepat, tepat dan amanah. semoga semakin sukses🤲😇.
+    image: "https://placecats.com/60/60?a=.png"
     name: Mita
   - message: Alhamdulillah Terimakasih Mas Luthfi, kerja cepat, Amanah dan Tidak diragukan 😇🙏
+    image: "https://placebear.com/60/60?a=.png"
     name: Ade Triani
   - message: Alhamdulillah di lancarkan prosesnya.
+    image: "https://placebear.com/60/60?a=.png"
     name: Melianti
 _options:
   image:
