--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ _options:
 ---
 
 <div class="editable">
-	<p>Kantor Hukum kami hadir di wilayah Purbalingga, Purwokerto, Banyumas, dan Cilacap untuk memberikan solusi komprehensif dalam kasus Hukum Pidana, Perceraian, Waris, dan Perdata.</p>
+	<p>Kantor Hukum kami hadir di wilayah Purbalingga, Banjarnegara, Purwokerto, Banyumas, dan Cilacap untuk memberikan solusi komprehensif dalam kasus Hukum Perceraian, Waris, dan Perdata.</p>
 
 	<p>Dengan pengalaman bertahun-tahun, tim advokat kami berkomitmen memberikan pendampingan hukum yang tepat, transparan, dan berintegritas tinggi.</p>
 </div>
