--- a/contact.html
+++ b/contact.html
@@ -12,39 +12,25 @@ map:
 ---
 
 <p class="editable">
-	Come see us in person, give us a call, or send us a message with your details and we'll be in contact shortly after. No obligations and your first meeting is free.
+	Kunjungi kantor kami secara langsung, hubungi kami melalui telepon, atau kirim pesan dengan detail Anda, dan kami akan segera menghubungi Anda. Tanpa kewajiban apa pun, dan konsultasi pertama Anda sepenuhnya gratis. Kami siap membantu Anda dengan solusi hukum terbaik!
 </p>
 
 <div class="columns">
 	<div class="column">
 		<p class="editor-link"><a href="cloudcannon:collections/_data/company.yml" class="btn"><strong>&#9998;</strong> Update Company Details</a></p>
 
-		<label>Phone Number</label>
+		<label>WhatsApp</label>
 		<p class="contact-info"><a href="tel:{{ site.data.company.phone }}">{{ site.data.company.phone }}</a></p>
 
-		<label>Email Address</label>
+		<label>Email</label>
 		<p class="contact-info"><a href="mailto:{{ site.data.company.contact_email_address }}">{{ site.data.company.contact_email_address }}</a></p>
 
-		<label>Address</label>
+		<label>Alamat</label>
 		<address class="contact-info">{{ site.data.company.address | replace: ',', '<br>' }}</address>
 	</div>
 
 	<div class="column">
-		<form method="post" action="/contact-success/">
-			<label for="email_address">Email Address</label>
-			<input id="email_address"type="text" name="email">
-
-			<label for="name">Name</label>
-			<input id="name" type="text" name="name">
-
-			<label for="message">Message</label>
-			<textarea id="message" name="message"></textarea>
-
-			<input type="hidden" name="_to" value="{{ site.data.company.contact_email_address }}">
-			<input type="text" name="_gotcha" style="display: none;">
-
-			<input type="submit" value="Send Message">
-		</form>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.5022195177826!2d109.3726551759374!3d-7.409532792600681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e65593cd9ad2b15%3A0x67037e4dd2407edd!2sAdvokat%20Pengacara%20Luthfi%20Asshiddieqy!5e0!3m2!1sen!2sid!4v1738081988315!5m2!1sen!2sid" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</div>
 </div>
 
