--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ testimonials:
   - message: Alhamdulillah di lancarkan prosesnya.
     image: "https://placebear.com/60/60?a=.png"
     name: Melianti
+  - message: Kerja cepat, efektif, dan nyaman
+    image: "https://placecats.com/60/60?a=.png"
+    name: Yulia
 _options:
   image:
     width: 60
