--- a/about.html
+++ b/about.html
@@ -9,11 +9,10 @@ navigation_order: 1
 
 <div class="editable">
 	<p>
-		Serving your community for over a century, Justice Law is committed to helping people through a number of services.
-		Our services range from conveyancing, mortgages to family law. Our clients range from large businesses to first home buyers.
+		Telah melayani masyarakat selama bertahun-tahun, Advokat Pengacara Luthfi berkomitmen untuk membantu Anda melalui berbagai layanan hukum. Kami menyediakan layanan bantuan hukum bidang Perkawinan & Perceraian, Waris, Pertahanan, dan Perdata.
 	</p>
 
-	<p>Meet the members of our capable team:</p>
+	<p>Kenali anggota tim kami yang andal:</p>
 </div>
 
 <p class="editor-link"><a href="cloudcannon:collections/_staff_members" class="btn"><strong>&#9998;</strong> Update Staff Members</a></p>
