--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@ navigation_order: 1
 				</div>
 				<ul class="staff-info">
 					<li>{{ member.name }}</li>
-					<li><small>{{ member.credentials }}</small></li>
-					<li><a href="tel:{{ site.data.company.phone }}">{{ site.data.company.phone }}</a>  ext {{ member.phone_extension }}</li>
+					<li><small>NIA: {{ member.credentials }}</small></li>
+					<li><a href="tel:{{ site.data.company.phone }}">{{ site.data.company.phone }}</a> </li>
 				</ul>
 			</div>
 
