--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ navigation_order: 1
 
 <div class="editable">
 	<p>
-		Telah melayani masyarakat selama bertahun-tahun, Advokat Pengacara Luthfi berkomitmen untuk membantu Anda melalui berbagai layanan hukum. Kami menyediakan layanan bantuan hukum bidang Perkawinan & Perceraian, Waris, Pertahanan, dan Perdata.
+		Telah melayani masyarakat selama bertahun-tahun, Advokat Pengacara Luthfi berkomitmen untuk membantu Anda melalui berbagai layanan hukum. Kami menyediakan layanan bantuan hukum bidang Perkawinan & Perceraian, Waris, Pertanahan, dan Perdata.
 	</p>
 
 	<p>Kenali anggota tim kami yang andal:</p>
