--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ _options:
 ---
 
 <div class="editable">
-	<p>Kantor Hukum kami hadir di wilayah Purbalingga, Banjarnegara, Purwokerto, Banyumas, dan Cilacap untuk memberikan solusi komprehensif dalam bidang Perkawinan & Perceraian, Waris, Pertahanan, dan Perdata.</p>
+	<p>Kantor Hukum kami hadir di wilayah Purbalingga, Banjarnegara, Purwokerto, Banyumas, dan Cilacap untuk memberikan solusi komprehensif dalam bidang Perkawinan & Perceraian, Waris, Pertanahan, dan Perdata.</p>
 
 	<p>Dengan pengalaman bertahun-tahun, tim advokat kami berkomitmen memberikan pendampingan hukum yang tepat, transparan, dan berintegritas tinggi.</p>
 </div>
