fix: color issue in mobile

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@ testimonials:
   - message: Kerja cepat, efektif, dan nyaman
     image: "https://placecats.com/60/60?a=.png"
     name: Yulia
+  - message: Pelayanan advokat yang terpercaya dan sangat ramah
+    image: "https://placebear.com/60/60?a=.png"
+    name: Tri
+  - message: Terimakasih sudah mendampingi proses cerai saya sampai selesai🙏🙏 
+    image: "https://placecats.com/60/60?a=.png"
+    name: Aulia
 _options:
   image:
     width: 60
