feat: fix terms

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ map:
 ---
 
 <p class="editable">
-	Kunjungi kantor kami secara langsung, hubungi kami melalui telepon, atau kirim pesan dengan detail Anda, dan kami akan segera menghubungi Anda. Tanpa kewajiban apa pun, dan konsultasi pertama Anda sepenuhnya gratis. Kami siap membantu Anda dengan solusi hukum terbaik!
+	Kunjungi kantor kami secara langsung, hubungi kami melalui telepon, atau kirim pesan dengan detail Anda, dan kami akan segera menghubungi Anda. Tanpa kewajiban apa pun, dan konsultasi pertama Anda sepenuhnya <b>gratis</b>. Kami siap membantu Anda dengan solusi hukum terbaik!
 </p>
 
 <div class="columns">
