--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@ _options:
 
 	<p>Dengan pengalaman bertahun-tahun, tim advokat kami berkomitmen memberikan pendampingan hukum yang tepat, transparan, dan berintegritas tinggi.</p>
 
-  <p><a href="https://pengacara-purbalingga.com">pengacara-purbalingga.com</a>,<a href="https://lawyerpurbalingga.com">lawyerpurbalingga.com</a>,<a href="https://advokatpurbalingga.com">advokatpurbalingga.com</a>,<a href="https://notarispurbalingga.com">notarispurbalingga.com</a>,</p>
+  <ul>
+    <li><a href="https://pengacara-purbalingga.com">pengacara-purbalingga.com</a></li>
+    <li><a href="https://lawyerpurbalingga.com">lawyerpurbalingga.com</a></li>
+    <li><a href="https://advokatpurbalingga.com">advokatpurbalingga.com</a></li>
+    <li><a href="https://notarispurbalingga.com">notarispurbalingga.com</a></li>
+  </ul>
 </div>
 
 <div class="testimonials">
