feat: add google tags for google ads

--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@ _options:
     height: 60
 ---
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16842537238">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16842537238');
+</script>
+
 <div class="editable">
 	<p>Kantor Hukum kami hadir di wilayah Purbalingga, Banjarnegara, Purwokerto, Banyumas, dan Cilacap untuk memberikan solusi komprehensif dalam bidang Perkawinan & Perceraian, Waris, Pertanahan, dan Perdata.</p>
 
